--- a/bestdeal/requirements.txt
+++ b/bestdeal/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.4.1
+dj-database-url==0.5.0
 Django==4.0
 django-environ==0.8.1
+django-heroku==0.3.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
+psycopg2==2.9.2
 pytz==2021.3
 sqlparse==0.4.2
+whitenoise==5.3.0
