--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.2.9
 django-cors-headers==3.10.1
 django-environ==0.8.1
 django-heroku==0.3.1
+django-phonenumber-field==6.0.0
 djangorestframework==3.13.1
 drf-yasg==1.20.0
 gunicorn==20.1.0
@@ -17,6 +18,7 @@ itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 packaging==21.3
+phonenumbers==8.12.39
 psycopg2==2.9.2
 pyparsing==3.0.6
 pytz==2021.3
